[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_poe"
version = "0.0.31"
authors = [
  { name="Lida Li", email="lli@quora.com" },
  { name="Jelle Zijlstra", email="jelle@quora.com" },
  { name="Anmol Singh", email="anmol@quora.com" },
]
description = "A demonstration of the Poe protocol using FastAPI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "sse-starlette",
    "typing-extensions",
    "uvicorn",
    "httpx",
    "httpx-sse",
    "pydantic>2",
]

[project.urls]
"Homepage" = "https://developer.poe.com/"

[tool.pyright]
pythonVersion = "3.7"

[tool.black]
target-version = ['py37']
skip-magic-trailing-comma = true

[tool.ruff]
select = [
  "F",
  "E",
  "I",  # import sorting
  "ANN",  # type annotations for everything
  "C4",  # flake8-comprehensions
  "B",  # bugbear
  "SIM",  # simplify
  "UP",  # pyupgrade
]

ignore = [
  "B008",  # do not perform function calls in argument defaults
  "ANN101",  # missing type annotation for self in method
  "ANN102",  # missing type annotation for cls in classmethod
]

line-length = 100
target-version = "py37"
