[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_poe"
version = "0.0.51"
authors = [
  { name="Lida Li", email="lli@quora.com" },
  { name="Jelle Zijlstra", email="jelle@quora.com" },
  { name="Yusheng Ding", email="yding@quora.com" },
  { name="Kris Yang", email="kryang@quora.com" },
  { name="John Li", email="jli@quora.com" },
]
description = "A demonstration of the Poe protocol using FastAPI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "sse-starlette",
    "typing-extensions>=4.5.0",
    "uvicorn",
    "httpx",
    "httpx-sse",
    "pydantic>2",
]

[project.urls]
"Homepage" = "https://creator.poe.com/"

[tool.pyright]
pythonVersion = "3.7"

[tool.black]
target-version = ['py37']
skip-magic-trailing-comma = true

[tool.ruff]
lint.select = [
  "F",
  "E",
  "I",  # import sorting
  "ANN",  # type annotations for everything
  "C4",  # flake8-comprehensions
  "B",  # bugbear
  "SIM",  # simplify
  "UP",  # pyupgrade
  "PIE810",  # startswith/endswith with a tuple
  "SIM101",  # mergeable isinstance() calls
  "SIM201",  # "not ... == ..." -> "... != ..."
  "SIM202",  # "not ... != ..." -> "... == ..."
  "C400",  # unnecessary list() calls
  "C401",  # unnecessary set() calls
  "C402",  # unnecessary dict() calls
  "C403",  # unnecessary listcomp within set() call
  "C404",  # unnecessary listcomp within dict() call
  "C405",  # use set literals
  "C406",  # use dict literals
  "C409",  # tuple() calls that can be replaced with literals
  "C410",  # list() calls that can be replaced with literals
  "C411",  # list() calls with genexps that can be replaced with listcomps
  "C413",  # unnecessary list() calls around sorted()
  "C414",  # unnecessary list() calls inside sorted()
  "C417",  # unnecessary map() calls that can be replaced with listcomps/genexps
  "C418",  # unnecessary dict() calls that can be replaced with literals
  "PERF101",  # unnecessary list() calls that can be replaced with literals
]

lint.ignore = [
  "B008",  # do not perform function calls in argument defaults
  "ANN101",  # missing type annotation for self in method
  "ANN102",  # missing type annotation for cls in classmethod
]

line-length = 100
target-version = "py37"
